<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wind"
    android:background="#362269"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="54dp"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:text="@string/button"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:hint="@string/search"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_fe_search"
        tools:ignore="RtlHardcoded">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/temperature"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toTopOf="@+id/white_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/degree"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/cloudy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/clear_sky"
        android:textColor="@color/white"
        android:textSize="@dimen/second_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/temperature"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/feels_like"
        android:textColor="@color/white"
        android:textSize="@dimen/third_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cloudy"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/feels_like_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/feels_like_num"
        android:textColor="@color/white"
        android:textSize="@dimen/third_font_size"
        app:layout_constraintStart_toEndOf="@+id/feels_like"
        app:layout_constraintTop_toBottomOf="@id/cloudy"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/degree"
        android:textColor="@color/white"
        android:textSize="@dimen/third_font_size"
        app:layout_constraintStart_toEndOf="@+id/feels_like_num"
        app:layout_constraintTop_toBottomOf="@id/cloudy"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/white_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"

        android:background="@drawable/white_constraint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/details"
            android:textColor="@color/custom_black"
            android:textSize="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/white_layout"
            tools:ignore="RtlHardcoded,SpUsage" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/img_describe_wind"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details"
            app:srcCompat="@drawable/ic_wind" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/wind"
            android:textColor="@color/grey"
            android:textSize="@dimen/details"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/wind_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/wind_num"
            android:textColor="@color/custom_black"
            android:textSize="@dimen/detail_number"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_symb"
            android:textColor="@color/custom_grey"
            android:textSize="@dimen/details"
            app:layout_constraintBottom_toBottomOf="@+id/wind_num"
            app:layout_constraintStart_toEndOf="@+id/wind_num"
            tools:ignore="SpUsage" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/img_describe_pressure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_pressure" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textColor="@color/grey"
            android:textSize="@dimen/details"
            app:layout_constraintLeft_toRightOf="@id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_num"
            android:textColor="@color/custom_black"
            android:textSize="@dimen/detail_number"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_symb"
            android:textColor="@color/custom_grey"
            android:textSize="@dimen/details"
            app:layout_constraintBottom_toBottomOf="@+id/pressure"
            app:layout_constraintStart_toEndOf="@+id/pressure"
            tools:ignore="SpUsage" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="140dp"
            android:contentDescription="@string/img_describe_humidity"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:srcCompat="@drawable/ic_humidity" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/humidity"
            android:textColor="@color/grey"
            android:textSize="@dimen/details"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:text="@string/humidity_num"
            android:textColor="@color/custom_black"
            android:textSize="@dimen/detail_number"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_symb"
            android:textColor="@color/custom_grey"
            android:textSize="@dimen/details"
            app:layout_constraintBottom_toBottomOf="@+id/humidity"
            app:layout_constraintStart_toEndOf="@+id/humidity"
            tools:ignore="SpUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>