<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_horizontal"
        android:text="@string/main_text"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/welcome_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_horizontal"
        android:text="@string/main_text2"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/welcome"
        app:layout_constraintStart_toStartOf="@+id/welcome_text"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        tools:ignore="SpUsage" />


    <EditText
        android:id="@+id/type_your_city"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/search"
        app:layout_constraintStart_toStartOf="@+id/welcome_text2"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text2"
        android:inputType="text"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="422dp"
        android:layout_height="361dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_person"
        android:contentDescription="@string/img_describe_welcome" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:onClick="onClick"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/type_your_city"
        app:layout_constraintTop_toBottomOf="@+id/type_your_city" />
</androidx.constraintlayout.widget.ConstraintLayout>